--- a/app/src/main/resources/com/uavguard/app/view/main.fxml
+++ b/app/src/main/resources/com/uavguard/app/view/main.fxml
@@ -1,22 +1,42 @@
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.StackPane?>
 
-<VBox fx:id="window" alignment="CENTER" xmlns:fx="http://javafx.com/fxml" fx:controller="com.uavguard.app.Controller">
-    <HBox fx:id="control" alignment="CENTER">
-        <Pane fx:id="root" xmlns:fx="http://javafx.com/fxml">
-            <Circle fx:id="base" layoutX="100" layoutY="100" radius="100"/>
-            <Circle fx:id="knob" onMouseReleased="#onMouseReleased" onMouseDragged="#onMouseDragged" layoutX="100" layoutY="100" radius="30"/>
-        </Pane>
-        <Pane fx:id="root" xmlns:fx="http://javafx.com/fxml">
-            <Circle fx:id="base" layoutX="100" layoutY="100" radius="100"/>
-            <Circle fx:id="knob" onMouseReleased="#onMouseReleased" onMouseDragged="#onMouseDragged" layoutX="100" layoutY="100" radius="30"/>
-        </Pane>
+<GridPane fx:id="window" xmlns:fx="http://javafx.com/fxml" fx:controller="com.uavguard.app.Controller">
+    <rowConstraints>
+        <RowConstraints percentHeight="5"/>
+        <RowConstraints percentHeight="45"/>
+        <RowConstraints percentHeight="30"/>
+        <RowConstraints percentHeight="20"/>
+    </rowConstraints>
+    <columnConstraints>
+        <ColumnConstraints hgrow="ALWAYS"/>
+    </columnConstraints>
+
+    <HBox fx:id="header" GridPane.rowIndex="0">
+        <Label text="UAVGuard"/>
     </HBox>
-    <HBox fx:id="commands" alignment="CENTER_LEFT">
+
+    <HBox fx:id="screen" alignment="CENTER" GridPane.rowIndex="1">
+        <HBox fx:id="stream" alignment="CENTER" HBox.hgrow="ALWAYS">
+            <Label text="No video stream available now..."/>
+        </HBox>
+    </HBox>
+
+    <HBox fx:id="control" GridPane.rowIndex="2" spacing="100">
+        <StackPane fx:id="joystick">
+            <Circle fx:id="base" radius="100"/>
+            <Circle fx:id="knob" onMouseReleased="#onMouseReleased" onMouseDragged="#onMouseDragged" radius="30"/>
+        </StackPane>
+    </HBox>
+
+    <HBox fx:id="commands" GridPane.rowIndex="3" alignment="CENTER">
         <Button text="Decolar"/>
         <Button text="Pousar"/>
     </HBox>
-</VBox>
+</GridPane>
