--- a/app/src/main/resources/com/uavguard/app/style/home.css
+++ b/app/src/main/resources/com/uavguard/app/style/home.css
@@ -22,7 +22,7 @@
     -fx-spacing: 20;
 }
 
-#commands > * {
+#commands > Button {
     -fx-border-radius: 3;
     -fx-min-width: 130;
     -fx-min-height: 40;
@@ -30,14 +30,6 @@
     -fx-border-color: #262626;
     -fx-text-fill: #f7f7f7;
     -fx-background-color: linear-gradient(to bottom, #353535, #333333);
-}
-
-.select {
-    -fx-min-width: 300;
-    -fx-background-color: linear-gradient(to bottom, #353535, #2b2b2b);
-    -fx-text-fill: #f7f7f7;
-    -fx-border-color: #434343;
-    -fx-border-radius: 3;
 }
 
 #joystick {
@@ -65,4 +57,70 @@
     -fx-fill: #4287f5;
     -fx-stroke: #425df5;
     -fx-stroke-width: 2;
+}
+
+#commands {
+}
+
+#actions {
+    -fx-padding: 20;
+}
+
+#deauth {
+}
+
+#deauth > GridPane > Button {
+    -fx-min-height: 40;
+    -fx-background-color: #2d2d2d;
+    -fx-border-color: #1e1e1e;
+    -fx-text-fill: #f7f7f7;
+}
+
+#start {
+    -fx-border-width: 1 0 0 1;
+    -fx-border-radius: 3 0 0 0;
+}
+
+#stop {
+    -fx-border-width: 1 1 0 1;
+    -fx-border-radius: 0 3 0 0;
+}
+
+#model {
+    -fx-spacing: 20;
+}
+
+#model > Label {
+    -fx-font-size: 15;
+    -fx-text-fill: #f7f7f7;
+}
+
+#commandSelect,
+#modelSelect {
+    -fx-border-radius: 3;
+    -fx-min-width: 200;
+    -fx-min-height: 40;
+    -fx-border-width: 1;
+    -fx-border-color: #262626;
+    -fx-text-fill: #f7f7f7;
+    -fx-background-color: linear-gradient(to bottom, #353535, #333333);
+}
+
+.text-area {
+    -fx-background-color: #2d2d2d;
+    -fx-text-fill: #00ffcc;
+    -fx-highlight-fill: #00ffcc33;
+    -fx-highlight-text-fill: white;
+    -fx-font-size: 13px;
+    -fx-border-color: #1e1e1e;
+    -fx-background-radius: 0 0 3 3;
+    -fx-border-radius: 0 0 3 3;
+}
+
+.text-area .scroll-pane {
+    -fx-background-color: transparent;
+}
+
+.text-area .content {
+    -fx-background-color: #2d2d2d;
 }
